Media Controls: UA CSS resources are flagged as a leak.

User-Agent CSS resources are incorrectly flagged as a leak because
they persist beyond a page navigation. This CL will count the
number of live resources originating from UA CSS and exclude them
from the test.

BUG=769249

Change-Id: I5b7233d0740b9411bc836b301fdc96459ef2cb7f