third_party/WebKit/Source/core/style/StyleImage.h
@@ -43,7 +43,7 @@ typedef void* WrappedImagePtr;
 
 class CORE_EXPORT StyleImage : public GarbageCollectedFinalized<StyleImage> {
  public:
-  virtual ~StyleImage() {}
+  virtual ~StyleImage();
 
   bool operator==(const StyleImage& other) const {
     return Data() == other.Data();
@@ -86,6 +86,10 @@ class CORE_EXPORT StyleImage : public GarbageCollectedFinalized<StyleImage> {
   ALWAYS_INLINE bool IsInvalidImage() const { return is_invalid_image_; }
   ALWAYS_INLINE bool IsPaintImage() const { return is_paint_image_; }
 
+  // If the StyleImage belongs to a User Agent stylesheet, it should be flagged
+  // so that it can persist beyond a navigation.
+  void FlagAsUserAgentResource();
+
   DEFINE_INLINE_VIRTUAL_TRACE() {}
 
  protected:
@@ -102,6 +106,8 @@ class CORE_EXPORT StyleImage : public GarbageCollectedFinalized<StyleImage> {
   bool is_image_resource_set_ : 1;
   bool is_invalid_image_ : 1;
   bool is_paint_image_ : 1;
+
+  bool is_ua_css_resource_ = false;
 
   static LayoutSize ApplyZoom(const LayoutSize&, float multiplier);
   LayoutSize ImageSizeForSVGImage(SVGImage*,
